# pa3

./: CMAKE_COMMANDS_CHEATSHEET.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  compress.cpp  compress.cpp.executable  uncompress.cpp  uncompress.cpp.executable
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  CMakeLists.txt
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  CMakeLists.txt
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp
test/: CMakeLists.txt  test_HCTree.cpp.executable
